// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`darkMode > darkMode default 1`] = `
"@media (prefers-color-scheme: dark) {
    .dark_cbg-black {
        --tw-bg-opacity: 1;
        background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
    }
}"
`;

exports[`darkMode > darkMode: 'class', 1`] = `
".dark view.dark_cbg-black,.dark text.dark_cbg-black {
    --tw-bg-opacity: 1;
    background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
}"
`;

exports[`darkMode > darkMode: 'class', uni-app x 1`] = `
".dark .dark_cbg-black,.dark .dark_cbg-black {
    --tw-bg-opacity: 1;
    background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
}"
`;

exports[`darkMode > darkMode: 'selector', 1`] = `
".dark_cbg-black:where(.dark,.dark view) {
    --tw-bg-opacity: 1;
    background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
}
.dark_cbg-black:where(.dark,.dark text) {
    --tw-bg-opacity: 1;
    background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
}"
`;

exports[`darkMode > darkMode: 'selector', uni-app x 1`] = `
".dark_cbg-black.dark,.dark .dark_cbg-black,.dark .dark_cbg-black {
    --tw-bg-opacity: 1;
    background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
}"
`;

exports[`darkMode > darkMode: ['selector', '[data-mode="dark"]'], 1`] = `
".dark_cbg-black:where(view) {
    --tw-bg-opacity: 1;
    background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
}
.dark_cbg-black:where(text) {
    --tw-bg-opacity: 1;
    background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
}"
`;

exports[`darkMode > darkMode: ['selector', '[data-mode="dark"]'], uni-app x 1`] = `
".dark_cbg-black,.dark_cbg-black {
    --tw-bg-opacity: 1;
    background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
}"
`;

exports[`darkMode > darkMode: ['variant', '&:not(.light *)'], 1`] = `
".dark_cbg-black:not(view):not(text) {
    --tw-bg-opacity: 1;
    background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
}"
`;

exports[`darkMode > darkMode: ['variant', '&:not(.light *)'], uni-app x 1`] = `
".dark_cbg-black:not(view):not(text) {
    --tw-bg-opacity: 1;
    background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
}"
`;

exports[`darkMode > darkMode: default uni-app x 1`] = `
"@media (prefers-color-scheme: dark) {
    .dark_cbg-black {
        --tw-bg-opacity: 1;
        background-color: rgba(0, 0, 0, var(--tw-bg-opacity, 1)) ;
    }
}"
`;
